fix spacing and title issues with front page experts

--- a/css/custom.css
+++ b/css/custom.css
@@ -53,6 +53,15 @@ body {
 	border-radius:5px;
 }
 
+.individual-homepage-expert img {
+	max-width: 100%;
+	padding-right:7px;
+}
+
+/*.individual-homepage-expert h5 {
+	clear: both;
+}
+*/
 .the-team-section img {
 	background:#f5f5f5;
 	border:1px solid #ddd;
@@ -95,6 +104,11 @@ body {
 .home-page-experts a {
 	/*max-width: 131px;*/
 	vertical-align: top;
+	color: #000;
+}
+
+.home-page-experts a:hover {
+	color: blue;
 }
 
 .home-page-experts p {
@@ -857,6 +871,10 @@ footer a {
 	margin: 1% auto auto 1%;;
 }
 
+.register-button {
+	margin-right: 100px;
+}
+
 @media all and (max-width: 1550px) {
 /*	.map-menu {
 		margin-top: -3.5% !important;
@@ -879,6 +897,17 @@ footer a {
 		width: 90%;
 	}
 
+	.individual-homepage-expert img {
+		width: 100%;
+	}
+
+	.individual-homepage-expert p {
+		clear: both;
+	}
+
+	.individual-homepage-expert h6 {
+		clear: both;
+	}
 
 }
 
@@ -959,10 +988,6 @@ footer a {
 		font-size: 1.2em;
 	}
 
-}
-
-.register-button {
-	margin-right: 100px;
 }
 
 @media all and (max-width: 900px) {
@@ -1101,6 +1126,18 @@ footer a {
 	.menu-overlay {
 		overflow: hidden;
 		padding-bottom: 85px;
+	}
+
+	.individual-homepage-expert img {
+		max-width: 165px;
+	}
+
+	.individual-homepage-expert p {
+		clear: none;
+	}
+
+	.individual-homepage-expert h6 {
+		clear: none;
 	}
 
 }
